# blackbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
emscripten/: CmakeLists.txt  bind.cpp
examples/: CMakeLists.txt
examples/intro/: CMakeLists.txt  intro.cpp
include/blackbox/: blackbox.h
src/: CMakeLists.txt  activation_function.cpp  activation_function.h  env_dictionary.h  environment.cpp  environment.h  json.h  layer.cpp  layer.h  output_layer.h  span.h  test.cpp
tools/: emscripten_build.bat
